# route/metrics.go
@@ -8,10 +8,18 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
-func (m *MetricsRoute) GetMetrics(c echo.Context) error {
+func (m *MetricsRoute) GetMetrics(ctx echo.Context) error {
 	metrics := service.MyService.Metrics().GetMetrics()
 
-	return c.JSON(http.StatusOK, codegen.ResponseZimaCubeMetricsOK{
+	return ctx.JSON(http.StatusOK, codegen.ResponseZimaCubeMetricsOK{
 		Data: &metrics,
 	})
+}
+
+func (m *MetricsRoute) PostAddZimaCube(ctx echo.Context) error {
+	return ctx.NoContent(http.StatusCreated)
+}
+
+func (m *MetricsRoute) DeleteZimaCube(ctx echo.Context, params codegen.DeleteZimaCubeParams) error {
+	return ctx.NoContent(http.StatusNoContent)
 }
